<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OurEarTrainer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="action_help">Help</string>
    <string name="action_share">Share</string>
	<string name="button_start">Start</string>
	<string name="button_replay">Replay</string>
	<string name="button_skip">Skip</string>
    
</resources>
