<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.oureartrainer.Keyboard_Activity" >

  <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
       	android:icon="@drawable/ic_action_help"
        android:title="@string/action_help"
        
        />
    
    <item
        android:id="@+id/action_share"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:icon="@drawable/abc_ic_menu_share_holo_dark"
        android:title="@string/action_share"
        
        />
        

     <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        />
    
</menu>
